# multi-agent-living-system

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  pyproject.toml
benchmarks/: BENCHMARK_REPORT.md  BENCHMARK_REPORT_CN.md  run_benchmarks.py
benchmarks/results/: all_benchmarks.json
benchmarks/results/data_pipeline/: b8af62d4ecd5_metrics.json  b8af62d4ecd5_recording.json  b8af62d4ecd5_result.json  benchmark_result.json  workspace_output.json
benchmarks/results/rest_api_design/: 00fd653bb463_metrics.json  00fd653bb463_recording.json  00fd653bb463_result.json  benchmark_result.json  workspace_output.json
benchmarks/results/simple_function/: benchmark_result.json  ee06c5b9a2d5_metrics.json  ee06c5b9a2d5_recording.json  ee06c5b9a2d5_result.json  workspace_output.json
examples/: custom_agents.py  quickstart.py
mals/: __init__.py  cli.py
mals/agents/: __init__.py  builtins.py  registry.py
mals/core/: __init__.py  blackboard.py  conductor.py  engine.py  models.py
mals/llm/: __init__.py  client.py
mals/memory/: __init__.py  manager.py
mals/observability/: __init__.py  dashboard.py  metrics.py  recorder.py
mals/utils/: config.py  log.py
tests/: __init__.py  test_blackboard.py  test_memory.py  test_models.py  test_observability.py  test_registry.py
